appId: ${APP_ID}
---
- runFlow:
    file: launch.yaml
- tapOn: Sign in with Gumroad
- runFlow:
    when:
      visible: Continue
    commands:
      - tapOn: Continue
- runFlow:
    when:
      visible: Logout
    commands:
      - tapOn: Logout
- scrollUntilVisible:
    element: Login
- tapOn: Email
- inputText: mobile_seller1_do_not_edit@gumroad.com
- pressKey: enter
- inputText: password
- pressKey: enter
- runFlow:
    when:
      visible: Not Now
    commands:
      - tapOn: Not Now
- runFlow:
    when:
      visible: Authentication Token
    commands:
      - tapOn: Login
- assertVisible: Authorize
- tapOn: Authorize
